<resources>
    <string name="app_name">Einstein</string>
    <string name="edit_message">Wellcome to Einstein.</string>

    <string name="theme1_1">Algebra</string>
    <string name="theme1_2">Percent</string>
    <string name="theme1_3">Areal</string>
    <string name="theme1_4">Division</string>
    <string name="theme1_5">Pythagoras</string>
    <string name="theme1_6">Fraction</string>
    <string name="theme1_7">Number systems</string>
    <string name="theme1_8">Multiplication</string>
    <string name="theme2_1">Sample mean</string>
    <string name="theme2_2">Sample median</string>
    <string name="theme2_3">Variance</string>
    <string name="theme2_4">Standard Deviation</string>
    <string name="theme2_5">Additive Rules</string>
    <string name="theme2_6">Product Rule</string>
    <string name="theme2_7">Bayes Rule</string>
    <string name="theme2_8">Mean of a random variable</string>

    <string name="title_activity_login">Sign in</string>

    <string-array name="typer">
        <item>Student</item>
        <item>UndervisningsPersonell</item>
    </string-array>

    <string-array name="type">
        <item>Per assignment</item>
        <item>All assignment per month</item>
    </string-array>

    <string-array name="MathSubjects">
        <item>Algebra</item>
        <item>Percent</item>
        <item>Areal</item>
        <item>Division</item>
        <item>Pythagoras</item>
        <item>Fraction</item>
        <item>Number systems</item>
        <item>Multiplication</item>

    </string-array>

    <string-array name="StatSubjects">
        <item>Sample mean</item>
        <item>Sample median</item>
        <item>Variance</item>
        <item>Standard Deviation</item>
        <item>Additive Rules</item>
        <item>Product Rule</item>
        <item>Bayes Rule</item>
        <item>Mean of a radnom variable</item>
    </string-array>


</resources>
