<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/blue1"
                android:onClick="getJson"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:text="@string/theme1_1"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/backToMainButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:onClick="backToMain"
                android:src="@mipmap/arrow" />

        </RelativeLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue2"
            android:onClick="getJson"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/theme1_2"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue3"
            android:onClick="getJson"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/theme1_3"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue4"
            android:onClick="getJson"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/theme1_4"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue1"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:onClick="getJson"
            android:text="@string/theme1_5"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:onClick="getJson"
            android:background="@color/blue2"
            android:paddingBottom="20dp"
            android:text="@string/theme1_6"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:onClick="getJson"
            android:background="@color/blue3"
            android:paddingBottom="20dp"
            android:text="@string/theme1_7"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:onClick="getJson"
            android:background="@color/blue4"
            android:paddingBottom="20dp"
            android:text="@string/theme1_8"
            android:textSize="30sp" />

    </LinearLayout>


</ScrollView>


    <!--


<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_class1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.diteh.einstein.Class1Activityty">

    <Button
        android:text="Assignments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="37dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="130dp"
        android:id="@+id/Assignement1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:onClick="assignmentOnClick"/>

    <Button
        android:text="Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="26dp"
        android:id="@+id/Back1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="Back1OnClick"/>
</RelativeLayout>
-->